k8s/cluster/apps/home/mealie/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: *app
      app.kubernetes.io/name: *app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: *app
        app.kubernetes.io/name: *app
    spec:
      containers:
        - name: mealie
          image: "hkotel/mealie:frontend-v1.0.0beta-4"
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          ports:
            - name: api
              containerPort: 9000
              protocol: TCP
            - name: http
              containerPort: 3000
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 0
            periodSeconds: 5
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          volumeMounts:
            - name: api-data
              mountPath: /app/data/
            - name: backup
              mountPath: /app/data/backups
        - name: mealie-api
          image: hkotel/mealie:api-v1.0.0beta-4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
              name: api
          volumeMounts:
            - mountPath: /app/data/
              name: api-data
            - mountPath: /app/data/backups
              name: backup
      volumes:
        - name: api-data
          persistentVolumeClaim:
            claimName: mealie-config-v2
        - name: backup
          nfs:
            server: "${NAS_ADDRESS}"
            path: "${NAS_NFS_PATH}/backup/app/mealie"
