k8s/cluster/apps/home/mealie/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app mealie
spec:
  type: ClusterIP
  ports:
    - name: api
      port: 9000
      protocol: TCP
      targetPort: api
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
