k8s/cluster/apps/home/mealie/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app mealie
  annotations:
    external-dns.alpha.kubernetes.io/target: "hsv-1.${SECRET_DOMAIN}"
    external-dns/is-public: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: &host "recipes.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: *app
                port:
                  number: 3000
            path: "/"
            pathType: Prefix
  tls:
    - hosts:
        - *host
